# fool-game

./: .env  .gitignore  Cargo.toml  Secrets.example.toml  Shuttle.toml  requests.http
entity/: Cargo.toml
entity/src/: card.rs  game.rs  lib.rs  player.rs  player_card.rs  prelude.rs  room.rs  user.rs  user_token.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20221021_000001_create_table_user.rs  m20221025_000002_create_table_room.rs  main.rs
src/: lib.rs  main.rs
src/core/: handler.rs  mod.rs
src/game/: deck.rs  deck_player.rs  mod.rs
src/user/: handler.rs  mod.rs  repository.rs
