[package]
name = "fool-game"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[workspace]
members = [
    ".",
    "entity",
    "migration"
]

[dependencies]
shuttle-service = { version = "0.8.0", features = ["web-actix-web"] }
shuttle-aws-rds = { version = "0.8.0", features = ["postgres"] }
shuttle-secrets = { version = "0.8.0" }
# shuttle-shared-db = { version = "0.8.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-actix-native-tls", "postgres"] }
tracing ={ version = "*"}
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
actix-web = "4.2"
anyhow = "1.0"
derive_more = "*"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"], optional = true }
chrono-tz ={ version = "0.8" , optional = true }
env_logger = "0.10"
log = "0.4"
playin-cards = "0.1"
rand = "0.8"
sea-orm = { version = "0.10", features = [
    "debug-print",
    "macros",
    # "runtime-tokio-native-tls",
    "runtime-actix-native-tls",
    # "sqlx-mysql",
    "sqlx-postgres",
    # "sqlx-sqlite",
    # "with-chrono",
    "with-time",
    "with-json",
    "with-rust_decimal",
    "with-uuid",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
time = { version = "0.3", features = ["serde"], optional = true }
time-tz ={ version = "1.0" , optional = true }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["time"]
time = ["dep:time", "dep:time-tz"]
chrono = ["dep:chrono", "dep:chrono-tz"]

[dev-dependencies]
sea-orm = { version = "0.10", features = [
    "debug-print",
    "mock",
    "macros",
    "runtime-actix-native-tls",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "with-chrono",
    "with-time",
    "with-json",
    "with-rust_decimal",
    "with-uuid",
], default-features = false }

[profile.release]
debug = 1
